XE-1178: Preview, Save & Continue, Save & View and Cancel buttons unreadable using Colibri skin Attempting fix. (cherry picked from commit 5053308f64eb289bf4cce6e35ec34f5336ae3f74)

--- a/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1455,6 +1455,7 @@ div#xwikiobjects input[type="checkbox"], div#xwikiclassproperties input[type="ch
 }
 input.button, .buttonwrapper a:visited, .buttonwrapper a:link, .buttonwrapper a:active {
   background-color: $theme.buttonPrimaryBackgroundColor;
+  background-image: none;
   #css3_backgroundLinearGradient({
      'angle': 'top',
      'colors': [
